<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:gravity="center_horizontal" >
    <TableLayout
        android:id="@+id/play_grid"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <TableRow android:gravity="center_horizontal">


            <Button
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:text="1"
                android:textSize="70dp"
                android:layout_weight="1"
                android:layout_marginRight  ="5dp"/>

            <Button android:id="@+id/two"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="2"
                android:textSize="70dp" />

            <Button android:id="@+id/three"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="3"
                android:textSize="70dp"
                android:layout_marginLeft= "5dp"/>



        </TableRow>

        <TableRow android:gravity="center_horizontal">
            <Button android:id="@+id/four"
                android:layout_width= "100dp"
                android:layout_height= "120dp"
                android:layout_weight="1"
                android:text="4"
                android:textSize="70dp"
                android:layout_marginRight="5dp"/>


            <Button android:id="@+id/five"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="5"
                android:textSize="70dp" />

            <Button android:id="@+id/six"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="6"
                android:textSize="70dp"
                android:layout_marginLeft= "5dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">
            <Button android:id="@+id/seven"
                android:layout_width= "100dp"
                android:layout_height= "120dp"
                android:layout_weight="1"
                android:text="7"
                android:textSize="70dp"
                android:layout_marginRight  ="5dp"/>


            <Button android:id="@+id/eight"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="8"
                android:textSize="70dp" />
            <Button
                android:id="@+id/nine"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="9"
                android:textSize="70dp"
                android:layout_marginLeft= "5dp" />
        </TableRow>

    </TableLayout>


    <TableLayout>
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        <TableRow>
            <TextView
                android:id="@+id/player_score_label"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/score_label_human"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tie_score_label"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/score_label_tie"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/computer_score_label"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:layout_marginLeft="40dp"
                android:text="@string/score_label_computer"
                android:textSize="20sp"></TextView>

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/player_score"
                android:textColor="#5d49ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/tie_score"
                android:textColor="#5d49ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/information"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/tie_score_label"
                android:gravity="left"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/computer_score"
                android:layout_below="@+id/information"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/zero"
                android:textColor="#5d49ff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>


    <LinearLayout>
        <TextView
            android:id="@+id/information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/info"
            android:textSize="20sp" />

    </LinearLayout>
</TableLayout>